@@ -1,10 +1,19 @@
 2007-08-07  Brian Warner  <warner@lothar.com>
 
+	* buildbot/buildslave.py (BuildSlave.addSlaveBuilder): third patch
+	from #48, this one to have the BuildSlave objects track
+	SlaveBuilders, so they'll be able to use that knowledge to
+	influence their canStartBuild() response.
+	* buildbot/process/builder.py (SlaveBuilder.attached): call it
+	(SlaveBuilder.detached): same
+	* buildbot/test/test_slaves.py (BuildSlave): test it
+
 	* buildbot/buildslave.py (BuildSlave.canStartBuild): incorporate
 	the second of Dustin's #48 patches, this one adding a method to
 	the BuildSlave that allows it to decide whether it is willing to
 	participate in a build or not.
 	(SlaveBuilder.isAvailable): use canStartBuild() to decide
+
 	* buildbot/test/test_run.py (CanStartBuild): test for it
 
 	* all: incorporate the first of four patches by Dustin Mitchell
